# register_log

./: .gitignore  CMakeLists.txt  register_log
include/: database.h  fingerprint.h  staff.h  visitor.h
include/gui/: main_window.h
src/: database.c  fingerprint.c  main.c  staff.c  visitor.c
src/gui/: main_window.c
